tests/single_instruction_translation_validation/mcsema/register-variants-samereg/sqrtss_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:207:25: error: use of undefined value '@sqrtf'
  %26 = tail call float @sqrtf(float %7) #25
                        ^
0.02user 0.03system 0:00.06elapsed 106%CPU (0avgtext+0avgdata 27384maxresident)k
0inputs+16outputs (0major+3264minor)pagefaults 0swaps
